got it up and running on new computer, added some email validation, fixed a home bug, fixed the progress bar to work correctly

--- a/src/main/webapp/static-files/app.html
+++ b/src/main/webapp/static-files/app.html
@@ -36,9 +36,7 @@
 	<body style="background-color:#eee">
 		<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#FFF">
 	  		<div class="container">
-	  			<button type="button" class="btn btn-default navbar-btn">
-	  				<a href="#/HomeView">Main Page</a>
-	  			</button>
+	  			<a class="btn btn-default navbar-btn" href="#/HomeView">Main Page</a>
 	  			<button type="button" class="btn btn-default navbar-btn disabled">Tutorial</button>
 	  			<button type="button" class="btn btn-default navbar-btn disabled">Report Blog</button>
 	  			<button type="button" class="btn btn-default navbar-btn disabled">Change Log</button>
