--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html
@@ -118,19 +118,16 @@
 			</span>
 		</div>
 		<div class="panel-body">
-			<div class="input-group">
-				<span style="display:inline-flex">
-				<div class="progress" style="width: 270px;height: 34px;">
-					<div class="progress-bar" role="progressbar" aria-valuenow="70"
-						aria-valuemin="0" aria-valuemax="100" 
-						style="padding-right: 0px;margin-right: -2px;width: {{vm.pd.progress}}%">
+			<div class="input-group" style="width:100%;">
+				<div class="progress" style="height: 100%;float:left;">
+					<div class="progress-bar" role="progressbar" style="height:34px;width: {{268*(vm.pd.progress/100)}}px">
 						<!-- <span ng-if="vm.pd.progress"
 							style="font-size: 18px;text-align: center;vertical-align: middle;line-height: 34px;">	
 							{{vm.pd.progress}}
 						</span> -->
 					</div>
 				</div>
-				<div class="input-group-btn">
+				<div class="input-group-btn" style="float:right;width:auto;">
 				  	<span class="btn btn-default projectMemberView_btn-file">
 					    Select 
 					    <input ng-file-upload-directive	type="file">						
