added AuthService to user/password centeralization, updated controller pass the passwords on Company side, need to add it to Member side

--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html
@@ -133,7 +133,7 @@
 					    <input ng-file-upload-directive	type="file">						
 					</span>
 					<button class="btn btn-default projectMemberView_AddMember" 
-						ng-click="vm.pd.UploadFileAProjectFile(vm.GetUserName(),vm.pd.projectEditProjectDialog_projectName,fileUploadDirective.file)"
+						ng-click="vm.pd.UploadFileAProjectFile(vm.pd.projectEditProjectDialog_projectName,fileUploadDirective.file)"
 						type="button">Upload</button>
 					<button class="btn btn-default projectMemberView_deleteProject" type="button">Delete</button>
 				</div>
