--- a/src/main/webapp/static-files/member-app/app-view/Member_AccountView.html
+++ b/src/main/webapp/static-files/member-app/app-view/Member_AccountView.html
@@ -14,7 +14,7 @@
 	<div class="panel-heading">{{memberProject}}</div>
 		<div class="panel-body">
 			<button type="button" class="btn btn-default center-block"
-				ng-click="vm.md.ToggleAndSetModel(GetUserName(),memberProject,GetMemberName())">Explore
+				ng-click="vm.md.ToggleAndSetModel(memberProject)">Explore
 			</button>				
 		</div>
 	</div>
