--- a/src/main/webapp/static-files/member-app/app-view/Member_LoginView.html
+++ b/src/main/webapp/static-files/member-app/app-view/Member_LoginView.html
@@ -11,7 +11,7 @@
 	<div>
 	    <h2>Member Login</h2>
 	    <div ng-show="vm.error" class="alert alert-danger">{{vm.error}}</div>
-	    <form name="memberForm" ng-submit="vm.login(vm.companyName,vm.member,vm.password)" role="form">
+	    <form name="memberForm" ng-submit="vm.login()" role="form">
 	    	<div class="form-group" ng-class="{ 'has-error': memberForm.companyName.$dirty && memberForm.companyName.$error.required }">
 	            <label >Company Name</label>
 	            <input type="text" name="companyName" class="form-control" ng-model="vm.companyName" required />
@@ -24,7 +24,7 @@
 	        </div>
 	        <div class="form-group" ng-class="{ 'has-error': memberForm.password.$dirty && memberForm.password.$error.required }">
 	            <label >Password</label>
-	            <input type="password" name="password" class="form-control" ng-model="vm.password" required />
+	            <input type="password" name="password" class="form-control" ng-model="vm.memberPassword" required />
 	            <span ng-show="memberForm.password.$dirty && memberForm.password.$error.required" class="help-block">Password is required</span>
 	        </div>
 	        <div class="form-actions">
