--- a/src/main/webapp/static-files/member-app/app-view/Member_AccountView.html
+++ b/src/main/webapp/static-files/member-app/app-view/Member_AccountView.html
@@ -9,6 +9,7 @@
 		margin:-100px 0 0 -150px;
 	}
 </style>
+<div style="height:25%"></div>
 <div ng-repeat="memberProject in vm.projectsMemberIsAPartOf">	
 	<div class="panel panel-default col-md-2 col-md-offset-1" style="padding: 0px;">
 	<div class="panel-heading">{{memberProject}}</div>
