--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_MemberView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_MemberView.html
@@ -59,23 +59,26 @@
 			<H4>Create/Update Member</H4>
 		</div>
 		<div class="panel-body">
-			<input type="text" style="margin-bottom:5px" class="form-control" placeholder="Name" 
-				ng-model="vm.memberNameToCreate">
-			<input type="text" style="margin-bottom:5px" class="form-control" placeholder="Password" 
-				ng-model="vm.memberPasswordToCreate">
-		
-			<div class="btn-group btn-group-justified" role="group" aria-label="...">
-			  <div class="btn-group" role="group">
-			    <button type="button" class="btn btn-default memberCreateMemberButtons" 
-			    	ng-click="vm.MemberDialogAccept(); vm.createMemberDialog=false;">Accept
-			    </button>
-			  </div>
-			  <div class="btn-group" role="group">
-			    <button type="button" class="btn btn-default memberDeleteButtons" 
-			    	ng-click="vm.createMemberDialog=false;">Cancel
-			    </button>
-			  </div>
-			</div>
+			<form name="newMemberForm" ng-submit="vm.MemberDialogAccept();vm.createMemberDialog=false;" role="form">
+				<div class="form-group"  style="margin-bottom: 5px;" 
+					ng-class="{ 'has-error': newMemberForm.memberName.$dirty && (newMemberForm.memberName.$error.required || newMemberForm.memberName.$error.pattern || newMemberForm.memberName.$error.maxlength || newMemberForm.memberName.$error.minlength )}">
+					<input type="text" name="memberName" style="margin-bottom:5px" class="form-control" placeholder="Name" ng-model="vm.memberNameToCreate"
+					ng-maxlength="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.MEMBER.MAXIMUM_LENGTH}}"
+					ng-minlength="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.MEMBER.MINIMUM_LENGTH}}" 
+					ng-pattern="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.MEMBER.VALID_PATTERN}}" required />
+				</div>
+				<div class="form-group" style="margin-bottom: 5px;" 
+					ng-class="{ 'has-error': newMemberForm.memberPassword.$dirty && (newMemberForm.memberPassword.$error.required || newMemberForm.memberPassword.$error.pattern || newMemberForm.memberPassword.$error.maxlength || newMemberForm.memberPassword.$error.minlength )}">
+					<input type="text" name="memberPassword" style="margin-bottom:5px" class="form-control" placeholder="Password" ng-model="vm.memberPasswordToCreate"
+						ng-maxlength="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.PASSWORD.MAXIMUM_LENGTH}}"
+						ng-minlength="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.PASSWORD.MINIMUM_LENGTH}}"
+						ng-pattern="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.PASSWORD.VALID_PATTERN}}" required />
+				</div>
+				<div class="form-actions btn-group btn-group-justified" role="group">		
+				  	<button style="width:50%;" type="submit" ng-disabled="newMemberForm.$invalid || vm.dataLoading" class="btn btn-default memberCreateMemberButtons">Login</button>		  
+				    <button style="width:50%;" type="button" class="btn btn-default memberDeleteButtons" ng-click="vm.createMemberDialog=false;">Cancel</button>
+				</div>
+			</form>
 		</div>
 	</div>
 
