--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_ProjectMemberView.html
@@ -55,13 +55,18 @@
 		<div>
 			<span><H4 style="display:inline-block">Projects</H4></span>
 			<span style="float:right;width: 50%;margin-right: 20px;">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Project Name" ng-model="vm.projectNameToAdd">
-					<span class="input-group-btn">
-						<button class="btn btn-default projectMemberView_AddMember" type="button" 
-							ng-click="vm.CreateANewProject(vm.projectNameToAdd)">Project</button>
-					</span>
-				</div>
+				<form name="projectForm" ng-submit="vm.CreateANewProject(vm.projectNameToAdd)" role="form">
+					<div class="form-group" ng-class="{ 'has-error': projectForm.projectName.$dirty && (projectForm.projectName.$error.required || projectForm.projectName.$error.maxlength || projectForm.projectName.$error.minlength)}">
+						<div class="input-group">			
+							<input type="text" name="projectName" class="form-control" placeholder="Project Name" ng-model="vm.projectNameToAdd"
+							ng-maxlength="{{CONSTANTS_Company_ProjectMemberController.Company_ProjectMemberController.PROJECTS.NEW_PROJECT_INPUT.MAXIMUM_LENGTH}}"
+							ng-minlength="{{CONSTANTS_Company_ProjectMemberController.Company_ProjectMemberController.PROJECTS.NEW_PROJECT_INPUT.MINIMUM_LENGTH}}" required />
+							<span class="input-group-btn">
+								<button type="submit" ng-disabled="projectForm.$invalid || vm.dataLoading" class="btn btn-default projectMemberView_AddMember">Project</button>
+							</span>
+						</div>	
+					</div>
+				</form>
 			</span>			
 		</div>
 	</div>  
