--- a/src/main/webapp/static-files/login-app/app-view/Company_LoginView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_LoginView.html
@@ -13,24 +13,31 @@
 	    <h2>Company Login</h2>
 	    <div ng-show="vm.error" class="alert alert-danger">{{vm.error}}</div>
 	    <form name="form" ng-submit="vm.login()" role="form">
-	        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && (form.username.$error.required || form.username.$error.maxlength)}">
+	        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && (form.username.$error.required || form.username.$error.pattern || form.username.$error.minlength || form.username.$error.maxlength)}">
 	            <label>Company Name</label>
 	            <input type="text" name="username" class="form-control" ng-model="vm.username" 
-	            	ng-maxlength="{{CONSTANTS.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.MAXIMUM_LENGTH}}" required />
+	            	ng-maxlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.MAXIMUM_LENGTH}}"
+	            	ng-minlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.MINIMUM_LENGTH}}"
+	            	ng-pattern="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.VALID_PATTERN}}" required />
 	            <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Company Name is required</span>
-	            <span ng-show="form.username.$error.maxlength" class="help-block">Company Name exceeds the maximum length of {{CONSTANTS.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.MAXIMUM_LENGTH}} characters</span>
+	            <span ng-show="form.username.$error.maxlength" class="help-block">Company name exceeds the maximum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.MAXIMUM_LENGTH}} characters</span>
+	            <span ng-show="form.username.$dirty && form.username.$error.minlength" class="help-block">Company name is below the minimum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.COMPANY_NAME.MINIMUM_LENGTH}} characters</span>
+	            <span ng-show="form.username.$error.pattern" class="help-block">Company name contains invalid characters</span>
 	        </div>
-	        <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && (form.password.$error.required || form.password.$error.maxlength) }">
+	        <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && (form.password.$error.required || form.password.$error.pattern || form.password.$error.minlength || form.password.$error.maxlength) }">
 	            <label>Password</label>
 	            <input type="password" name="password" class="form-control" ng-model="vm.password" 
-	            	ng-maxlength="{{CONSTANTS.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.MAXIMUM_LENGTH}}" required />
+	            	ng-maxlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.MAXIMUM_LENGTH}}"
+	            	ng-minlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.MINIMUM_LENGTH}}"
+	            	ng-pattern="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.VALID_PATTERN}}" required />
 	            <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
-	            <span ng-show="form.password.$error.maxlength" class="help-block">Password exceeds the maximum length of {{CONSTANTS.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.MAXIMUM_LENGTH}} characters</span>
+	            <span ng-show="form.password.$error.maxlength" class="help-block">Password exceeds the maximum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.MAXIMUM_LENGTH}} characters</span>
+	            <span ng-show="form.password.$dirty && form.password.$error.minlength" class="help-block">Password is below the minimum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_LOGIN_FORM.PASSWORD.MINIMUM_LENGTH}} characters</span>
+	            <span ng-show="form.password.$error.pattern" class="help-block">Password contains invalid characters</span>
 	        </div>
 	        <div class="form-actions">
 	            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary">Login</button>
-	            <button type="button" class="btn btn-default" ng-click="Company_LoginView_registrationDialog_show=!Company_LoginView_registrationDialog_show">
-	     
+	            <button type="button" class="btn btn-default" ng-click="Company_LoginView_registrationDialog_show=!Company_LoginView_registrationDialog_show">	     
 	            	Register
 	            </button>
 	        </div>
@@ -39,41 +46,56 @@
 </div>
 
 <span id="Company_LoginView_registrationDialog" ng-show="Company_LoginView_registrationDialog_show">
-	<div class="panel panel-default col-md-6 col-md-offset-3 Company_LoginView_HVCenterStyle"
-		style="padding:0px;">
+	<div class="panel panel-defaul<span ng-show="form.username.$error.maxlength" class="help-block">
 		<div style="padding:10px;">
 		    <h2>Register</h2>
 		    <div ng-show="vm.rd.error" class="alert alert-danger">{{vm.rd.error}}</div>
 		    <form name="regForm" style="padding:10px;"
-		    	ng-submit="vm.rd.RegisterCompany(vm.rd.company.companyName,vm.rd.company.passwordA,vm.rd.company.passwordB,vm.rd.company.email)" 
+		    	ng-submit="vm.rd.RegisterCompany(vm.rd.company.companyName,vm.rd.company.passwordA,vm.rd.company.passwordB,vm.rd.company.email)"
 		    	role="form">
-		        <div class="form-group" ng-class="{ 'has-error': regForm.companyName.$dirty && (regForm.companyName.$error.required || regForm.companyName.$error.maxlength) }">
+		        <div class="form-group" ng-class="{ 'has-error': regForm.companyName.$dirty && (regForm.companyName.$error.required || regForm.companyName.$error.pattern || regForm.companyName.$error.minlength || regForm.companyName.$error.maxlength) }">
 		            <label>Company Name</label>		    
 		            <input type="text" name="companyName" class="form-control" ng-model="vm.rd.company.companyName" 
-		            	ng-maxlength="{{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.COMPANY_NAME.MAXIMUM_LENGTH}}" required />
+		            	ng-maxlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.COMPANY_NAME.MAXIMUM_LENGTH}}" 
+		            	ng-minlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.COMPANY_NAME.MINIMUM_LENGTH}}"
+		            	ng-pattern="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.COMPANY_NAME.VALID_PATTERN}}" required />
 		            <span ng-show="regForm.companyName.$dirty && regForm.companyName.$error.required" class="help-block">Company Name is required</span>
-		            <span ng-show="regForm.companyName.$error.maxlength" class="help-block">Company Name exceeds the maximum length of {{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.COMAPNY_NAME.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.companyName.$error.maxlength" class="help-block">Company Name exceeds the maximum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.COMAPNY_NAME.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.companyName.$dirty && regForm.companyName.$error.minlength" class="help-block">Company Name is below the minimum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.COMAPNY_NAME.MINIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.companyName.$error.pattern" class="help-block">Company Name contains invalid characters</span>
 		        </div>
- 		        <div class="form-group" ng-class="{ 'has-error': regForm.passwordA.$dirty && (regForm.passwordA.$error.required || regForm.passwordA.$error.maxlength)  }">
+ 		        <div class="form-group" ng-class="{ 'has-error': regForm.passwordA.$dirty && (regForm.passwordA.$error.required || regForm.passwordA.$error.pattern || regForm.passwordA.$error.minlength || regForm.passwordA.$error.maxlength)  }">
 		            <label>Password</label>
 		            <input type="password" name="passwordA" class="form-control" ng-model="vm.rd.company.passwordA" 
-		            	ng-maxlength="{{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}}" required />
+		            	ng-maxlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}}"
+		            	ng-minlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MINIMUM_LENGTH}}"
+		            	ng-pattern="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.VALID_PATTERN}}" required />		            	
 		            <span ng-show="regForm.passwordA.$dirty && regForm.passwordA.$error.required" class="help-block">Password is required</span>
-		            <span ng-show="regForm.passwordA.$error.maxlength" class="help-block">Password exceeds the maximum length of {{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.passwordA.$error.maxlength" class="help-block">Password exceeds the maximum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.passwordA.$dirty && regForm.passwordA.$error.minlength" class="help-block">Password is below the minimum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MINIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.passwordA.$error.pattern" class="help-block">Password contains invalid characters</span>
 		        </div>
-		        <div class="form-group" ng-class="{ 'has-error': regForm.passwordB.$dirty && (regForm.passwordA.$error.required || regForm.passwordA.$error.maxlength)  }">
+		        <div class="form-group" ng-class="{ 'has-error': regForm.passwordB.$dirty && (regForm.passwordA.$error.required || regForm.passwordA.$error.pattern || regForm.passwordA.$error.minlength || regForm.passwordA.$error.maxlength)  }">
 		            <label>Password Confirmation</label>
 		            <input type="password" name="passwordB" class="form-control" ng-model="vm.rd.company.passwordB" 
-		            	ng-maxlength="{{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}}" required />
+		            	ng-maxlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}}"
+		            	ng-minlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MINIMUM_LENGTH}}"
+		            	ng-pattern="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.VALID_PATTERN}}" required />	
 		            <span ng-show="regForm.passwordB.$dirty && regForm.passwordB.$error.required" class="help-block">Password Confirmation is required</span>
-		            <span ng-show="regForm.passwordB.$error.maxlength" class="help-block">Password Confirmation exceeds the maximum length of {{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.passwordB.$error.maxlength" class="help-block">Password Confirmation exceeds the maximum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.passwordB.$dirty && regForm.passwordB.$error.minlength" class="help-block">Password is below the minimum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MINIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.passwordB.$error.pattern" class="help-block">Password contains invalid characters</span>
 		        </div>
-		        <div class="form-group" ng-class="{ 'has-error': regForm.email.$dirty && (regForm.email.$error.required || regForm.email.$error.maxlength || regForm.email.$invalid)  }">
+		        <div class="form-group" ng-class="{ 'has-error': regForm.email.$dirty && (regForm.email.$error.required || regForm.email.$error.pattern || regForm.email.$error.minlength || regForm.email.$error.maxlength)  }">
 		            <label >Email</label>
 		            <input type="email" name="email" class="form-control" ng-model="vm.rd.company.email" 
-		            	ng-maxlength="{{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.EMAIL.MAXIMUM_LENGTH}}" required />
+		            	ng-maxlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.EMAIL.MAXIMUM_LENGTH}}"
+						ng-minlength="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.EMAIL.MINIMUM_LENGTH}}"
+		            	ng-pattern="{{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.EMAIL.VALID_PATTERN}}" required />	
 		            <span ng-show="regForm.email.$dirty && regForm.email.$error.required" class="help-block">Email is required</span>
-		            <span ng-show="regForm.email.$error.maxlength" class="help-block">Email exceeds the maximum length of {{CONSTANTS.Company_LoginController.COMPANY_REGISTRATION_FORM.EMAIL.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.email.$error.maxlength" class="help-block">Email exceeds the maximum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.EMAIL.MAXIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.email.$dirty && regForm.email.$error.minlength" class="help-block">Email is below the minimum length of {{CONSTANTS_Company_LoginController.Company_LoginController.COMPANY_REGISTRATION_FORM.PASSWORD.MINIMUM_LENGTH}} characters</span>
+		            <span ng-show="regForm.email.$error.pattern" class="help-block">Email contains invalid characters</span>
 		        </div>
 		        <div class="form-actions"> 
 		            <button type="submit" ng-disabled="regForm.$invalid || vm.rd.dataLoading" class="btn btn-primary">Register</button>
