--- a/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_MemberView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_AccountSubViews/Company_MemberView.html
@@ -75,7 +75,7 @@
 						ng-pattern="{{CONSTANTS_Company_MemberController.Company_MemberController.CREATE_MEMBER_FORM.PASSWORD.VALID_PATTERN}}" required />
 				</div>
 				<div class="form-actions btn-group btn-group-justified" role="group">		
-				  	<button style="width:50%;" type="submit" ng-disabled="newMemberForm.$invalid || vm.dataLoading" class="btn btn-default memberCreateMemberButtons">Login</button>		  
+				  	<button style="width:50%;" type="submit" ng-disabled="newMemberForm.$invalid || vm.dataLoading" class="btn btn-default memberCreateMemberButtons">Ok</button>		  
 				    <button style="width:50%;" type="button" class="btn btn-default memberDeleteButtons" ng-click="vm.createMemberDialog=false;">Cancel</button>
 				</div>
 			</form>
