--- a/src/main/webapp/static-files/login-app/app-view/Company_LoginView.html
+++ b/src/main/webapp/static-files/login-app/app-view/Company_LoginView.html
@@ -46,7 +46,7 @@
 </div>
 
 <span id="Company_LoginView_registrationDialog" ng-show="Company_LoginView_registrationDialog_show">
-	<div class="panel panel-defaul<span ng-show="form.username.$error.maxlength" class="help-block">
+	<div class="Company_LoginView_HVCenterStyle panel panel-defaul<span ng-show="form.username.$error.maxlength" class="help-block">
 		<div style="padding:10px;">
 		    <h2>Register</h2>
 		    <div ng-show="vm.rd.error" class="alert alert-danger">{{vm.rd.error}}</div>
