--- a/src/main/webapp/static-files/app.html
+++ b/src/main/webapp/static-files/app.html
@@ -54,6 +54,7 @@
 	    <script src="/ModelViewer/static-files/common-service/AuthService.js"></script>    
 	    <script src="/ModelViewer/static-files/common-service/UserService.js"></script>
 	    <script src="/ModelViewer/static-files/common-service/ProjectMemberService.js"></script>
+	     <script src="/ModelViewer/static-files/common-service/ProjectInfoService.js"></script>
 	    <script src="/ModelViewer/static-files/common-service/MemberService.js"></script>
 	    <script src="/ModelViewer/static-files/common-service/FileService.js"></script>
 	    
