added unity webgl player with lightbox

--- a/src/main/webapp/static-files/member-app/app-view/Member_ProjectView.html
+++ b/src/main/webapp/static-files/member-app/app-view/Member_ProjectView.html
@@ -24,12 +24,12 @@
 		
 </style>
 <script>
-    lightbox.option({
+ /*   lightbox.option({
     	'disableScrolling': true,
     	'fitImagesInViewport':true,    
      	'resizeDuration': 200,
       	'wrapAround': true
-    })
+    });*/
 </script>
 
 <div class="modelSpacerTop"></div>
@@ -67,9 +67,12 @@
 			<div class="panel-body">
 				<div class="row" style="overflow: hidden;">
 					<ul class="ng-scope ol-xs-6 col-md-3 carousel5 thumbNailResize" style="height:125px;width:90px; ng-scope;display: inline-flex;overflow:visible" rn-carousel>
-				   		<li class="thumbnail" ng-repeat="(key, value) in vm.projectMeta.Models | getImagesFromListOfList">
-							<a href="{{value.url}}" draggable="false" data-lightbox="images" data-title="{{value.name}}">
-							    <img class="thumbNailResize" draggable="false" src="{{value.url}}" alt="Could not locate image.">
+				   		<li class="thumbnail" ng-repeat="value in vm.modelImages">
+							<a href="{{value.urlImage}}" draggable="false" data-lightbox="models" 
+								url-image="{{value.urlImage}}" 
+								url-unity="{{value.urlUnity}}" 
+								data-type="{{value.dataType}}">
+							    <img class="thumbNailResize" draggable="false" src="{{value.urlImage}}" alt="Could not locate image.">
 							</a>
 					    </li>
 					</ul>
