--- a/src/main/webapp/static-files/member-app/app-view/Member_ProjectView.html
+++ b/src/main/webapp/static-files/member-app/app-view/Member_ProjectView.html
@@ -1,26 +1,40 @@
 <style>
 	.innerWidth {
-		width: 80%;
+		width: 70%;
 	} 
 	.modelSpacer {
-		width: 20%;
+		width: 15%;
 	} 
 	.modelSpacerTop {
 		height: 25%;
 		width: 100%;
 	} 
 	.thumbNailResize{
-		height:224px;
+		height:234px;
 		width:160px;
 	}
-@media only screen and (max-width: 900px){
-	.modelSpacer {
-		width: 0%;
+	.normalResizeUl {
+		height:500px;
+		width:320px;
+
 	}
-	.innerWidth {
-		width: 100%;
-	} 
-}
+	.normalResize{
+		height:468px;
+		width:320px;
+		border-style: solid;
+	    border-width: thin;
+	    border-color: #eee;
+	    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	    cursor: zoom-in;
+	}	
+	
+   	@media only screen and (max-device-width: 500px){
+		html, body{
+			overflow: hidden;
+			width: 100%;
+		    height: 100%;
+		}
+	}
 		
 </style>
 <script>
@@ -32,55 +46,79 @@
     });*/
 </script>
 
-<div class="modelSpacerTop"></div>
-<div style="display: flex;width:100%;height:100%">
-	<div class="modelSpacer"></div>
-	<div class="bs-example jumbotron innerWidth" style="background-color: #FFF;border-radius: 3px;border-style: solid;border-color: #eee;">
-		<div class="panel panel-default" id="projectStory">
-			<div class="panel-heading">
-				<h3 class="panel-title">Project Story</h3>
+<!-- Member Project View -->
+<div style="width: 100%;height: 100%;overflow-y: scroll;overflow-x: hidden;top: -55px;">
+	<img style="position: absolute;z-index: -1;top:-56px;" draggable="false" src="static-files/images/highres.jpg" alt="Could not locate image.">
+	<div class="modelSpacerTop"></div>
+	<div style="display: flex;width:100%;height:100%">
+		<div class="modelSpacer"></div>		
+		
+		<div class="innerWidth" style="position:relative;">
+			<div style="height:50px">
+				<div style="height:100%;width:25%;float:left;"></div>
+				<div style="overflow: hidden;height:100%;width:50%;float:left;border-top-left-radius: 10px;border-top-right-radius: 10px;background-color: #fff;text-align: center;border-color: #eee;border-style: solid;border-bottom-style: none;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+					<p style="margin-top: 15px; font-size: 16px; font-weight: 700;">{{vm.projectTitle}}</p>
+				</div>
+				<div style="height:100%;width:25%;float:left;"></div>
 			</div>
-			<div class="panel-body">
-				{{vm.projectStory}}
- 			</div>
-		</div>
-		<div class="panel panel-default"> <!-- images -->
-			<div class="panel-heading">
-				<h3 class="panel-title">Images</h3>
-			</div>
-			<div class="panel-body">
-				<div class="row" style="overflow: hidden;">
-					<ul class="ng-scope col-xs-6 col-md-3 thumbNailResize" style="height:234px;width:160px; ng-scope;display: inline-flex;overflow:visible" rn-carousel>				    	
-						<li class="thumbnail" ng-repeat="(key, value) in vm.projectMeta.Images">
-							<a href="{{value.url}}" draggable="false" data-lightbox="images" data-title="{{value.name}}">
-							    <img class="thumbNailResize" draggable="false" src="{{value.url}}" alt="Could not locate image.">
-							</a>
-					    </li>
-					</ul>
+			<div class="bs-example jumbotron" style="position:relative;background-color: #FFF;border-radius: 3px;border-style: solid;border-color: #eee;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+			
+				<div class="panel panel-default" id="projectStory" ng-if="vm.projectStory">
+					<div class="panel-heading">
+						<h3 class="panel-title">Project Story</h3>
+					</div>
+					<div class="panel-body">
+						<p>{{vm.projectStory}}</p>
+		 			</div>
+				</div>
+				<div class="panel panel-default" ng-if="vm.projectMeta.Images"> <!-- images -->
+					<div class="panel-heading" style="display: flex;">
+						<h3 class="panel-title">Images:</h3><span style="width:6px;"></span><span>({{vm.projectMeta.Images.length}} total)</span>
+					</div>
+					<div class="panel-body" jp-ng-blink active='true' options='{"duration":2000,"itteration":2}'>
+						<div style="overflow: hidden;">
+							<ul class="col-xs-6 col-md-3 normalResizeUl" style="display:inline-flex;overflow:visible" rn-carousel>				    	
+								<li ng-repeat="(key, value) in vm.projectMeta.Images">
+									<a href="{{value.url}}" draggable="false" data-lightbox="images" data-title="{{value.name}}">
+									    <img class="normalResize" draggable="false" src="{{value.url}}" alt="Could not locate image.">
+									</a>
+									<div style="overflow:hidden;padding:7px;" >{{value.name}}</div>
+							    </li>
+							</ul>
+						</div>
+				
+					<!-- <div jp-ng-blink active="true" options='{"duration":2000,"itteration":2}' class="jpSwipeLeftRightInform jpNgBlink" style="top:0px;font-size: 13vw;display:flex;justify-content:center;align-items:center;position: absolute;width: 100%;height: 100%;">
+							<span style="line-height: 1.25;">&#171;</span>
+							<span>SWIPE</span>
+							<span style="line-height: 1.25;">&#187;</span>
+						</div> -->	
+						
+					</div>
+				</div>
+				<div class="panel panel-default" ng-if="vm.projectMeta.Models">
+					<div class="panel-heading" style="display: flex;">
+						<h3 class="panel-title">Models:</h3><span style="width:6px;"></span><span>({{vm.projectMeta.Models.length}} total)</span>
+					</div>
+					<div class="panel-body">
+						<div style="overflow: hidden;">
+							<ul class="col-xs-6 col-md-3 normalResizeUl" style="display: inline-flex;overflow:visible" rn-carousel>
+						   		<li ng-repeat="value in vm.modelImages">
+									<a href="{{value.urlImage}}" draggable="false" data-lightbox="models" 
+										url-image="{{value.urlImage}}" 
+										url-unity="{{value.urlUnity}}" 
+										data-type="{{value.dataType}}">
+									    <img class="normalResize" draggable="false" src="{{value.urlImage}}" alt="Could not locate image.">
+									</a>
+									<div style="overflow:hidden;padding:7px;" >{{value.name}}</div>
+							    </li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Models</h3>
-			</div>
-			<div class="panel-body">
-				<div class="row" style="overflow: hidden;">
-					<ul class="ng-scope ol-xs-6 col-md-3 carousel5 thumbNailResize" style="height:125px;width:90px; ng-scope;display: inline-flex;overflow:visible" rn-carousel>
-				   		<li class="thumbnail" ng-repeat="value in vm.modelImages">
-							<a href="{{value.urlImage}}" draggable="false" data-lightbox="models" 
-								url-image="{{value.urlImage}}" 
-								url-unity="{{value.urlUnity}}" 
-								data-type="{{value.dataType}}">
-							    <img class="thumbNailResize" draggable="false" src="{{value.urlImage}}" alt="Could not locate image.">
-							</a>
-					    </li>
-					</ul>
-				</div>
-			</div>
+			<div class="modelSpacer"></div>
 		</div>
 	</div>
-	<div class="modelSpacer"></div>
 </div>
 
 
